# renga-api-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml  docs.yml
ci/: build_and_test.bat
src/: checks.rs  error.rs  lib.rs  tests.rs
src/api/: application.rs  entity.rs  entity_types.rs  mod.rs  project.rs  uuid.rs
src/native/: class_id.rs  constants.rs  dispatch.rs  mod.rs  runtime.rs  variant.rs
src/native/records/: mod.rs  version.rs
tests/data/: style_category.rst
