[package]
name = "renga-api-rs"
version = "0.1.0"
description = "Renga COM API bindings for Rust"
authors = [ 
  "whs31 <riazantsev_dl@rengabim.com>"
]
license = "MIT"
repository = "https://github.com/whs31/renga-api-rs"
homepage = "https://github.com/whs31/renga-api-rs"
keywords = ["renga", "com", "api", "bindings"]
categories = ["api-bindings", "external-ffi-bindings", "com", "windows"]
edition = "2021"

[dependencies.windows]
version = "0.58.0"
features = [
  "Win32_Foundation",
  "Win32_System_Com",
  "Win32_System_Ole",
  "Win32_System_Variant"
]

[dependencies]
thiserror = "1.0.63"
log = "0.4.22"
semver = "1.0.23"
guid = "0.1.0"

[dev-dependencies]
env_logger = "0.11.5"
anyhow = "1.0.88"